# nyu_finger

./: .gitignore  CMakeLists.txt  Config.cmake.in  colcon.pkg  package.xml  readme.md  setup.py
demos/: finger_simulator_demo.ipynb  move_robot.ipynb  nyu_finger.ipynb  nyu_finger_calibration_dgh.py  nyu_finger_calibration_hwp.py  nyu_finger_dgh.py  nyu_finger_double_calibration_dgh.py  nyu_finger_double_calibration_hwp.py  nyu_finger_double_dgh.py  nyu_finger_double_hwp.py  nyu_finger_double_pd_dgh.py  nyu_finger_hwp.py  nyu_finger_pd_dgh.py  nyu_finger_real_robot.ipynb  nyu_finger_real_robot_basic.py  nyu_finger_real_robot_dual.ipynb  nyu_finger_simulator.py  nyu_finger_thread_head.py  pinocchio_bullet_wrapper.py
demos/.ipynb_checkpoints/: finger_simulator_demo-checkpoint.ipynb
demos/Lab4_material/: Inverse_Kinematics.ipynb  Inverse_Kinematics_real_robot.ipynb
demos/Lab4_material/inverse_kinematics.key/Metadata/: BuildVersionHistory.plist  DocumentIdentifier  Properties.plist
demos/basic_demos/: finger_simulator_demo.ipynb  nyu_finger_real_robot.ipynb  test.py
include/nyu_finger/: nyu_finger.hpp
include/nyu_finger/dynamic_graph_manager/: dgm_nyu_finger.hpp  dgm_nyu_finger_double.hpp
python/nyu_finger/: __init__.py
python/nyu_finger_sim/: nyu_finger_simulator.py
src/: CMakeLists.txt  nyu_finger.cpp
src/dynamic_graph_manager/: dg_main_nyu_finger.cpp  dg_main_nyu_finger_double.cpp  dgm_nyu_finger.cpp  dgm_nyu_finger_double.cpp
srcpy/: CMakeLists.txt  nyu_finger_hwp.cpp  py_nyu_finger.cpp
urdf/: fingeredu.urdf
