<?xml version="1.0"?>
<package format="2">
  <name>nyu_finger</name>
  <version>1.0.0</version>
  <description>Interfaces to the NYU Finger robot</description>
  <author email="jviereck@tue.mpg.de">Julian Viereck</author>
  <maintainer email="jviereck@tue.mpg.de">Julian Viereck</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>blmc_drivers</depend>
  <depend>blmc_robots</depend>
  <depend>master_board_sdk_catkin</depend>
  <depend>real_time_tools</depend>
  <depend>mpi_cmake_modules</depend>
  <depend>odri_control_interface</depend>
  <depend>pybind11_catkin</depend>
  <depend>yaml_cpp_catkin</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

</package>
